force-app/main/default/objects/WD_Requistion__c/WD_Requistion__c.object-meta.xml
<CustomObject>
    <description>Workday Requisition Data</description>
    <label>WD_Requistion</label>
    <nameField>
        <displayFormat>WDR-{000000}</displayFormat>
        <label>WD_Requistions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WD_Requistions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>