force-app/main/default/objects/WD_Requistion__c/fields/Business_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Area__c</fullName>
    <inlineHelpText>Worldwide Field Ops, Networking OEM &amp; Channel Sales, Networking End-User Sales, etc.</inlineHelpText>
    <label>Business Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>