force-app/main/default/objects/WD_Requistion__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <inlineHelpText>When the req is closed</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>