force-app/main/default/objects/WD_Requistion__c/fields/Cost_Center_ID__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_ID__c</fullName>
    <inlineHelpText>eg: &apos;320500&apos;</inlineHelpText>
    <label>Cost Center ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>