force-app/main/default/objects/WD_Requistion__c/fields/Cost_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_Name__c</fullName>
    <inlineHelpText>eg: &apos;WWFO-SA-2100&apos;</inlineHelpText>
    <label>Cost Center Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>