force-app/main/default/objects/WD_Requistion__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <label>Hiring Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>