force-app/main/default/objects/WD_Requistion__c/fields/IsEvergreen__c.field-meta.xml
<CustomField>
    <fullName>IsEvergreen__c</fullName>
    <label>IsEvergreen</label>
    <length>10</length>
    <type>Text</type>
</CustomField>