force-app/main/default/objects/WD_Requistion__c/fields/Job_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Job_Requisition__c</fullName>
    <inlineHelpText>eg: JR1918961 OEM Sales Manager - WWFO (Open)</inlineHelpText>
    <label>Job Requisition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>