force-app/main/default/objects/WD_Requistion__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <inlineHelpText>eg: &apos;GeForce&apos;, &apos;Tesla, DGX, GRID&apos;, etc</inlineHelpText>
    <label>Market</label>
    <length>100</length>
    <type>Text</type>
</CustomField>