force-app/main/default/objects/WD_Requistion__c/fields/Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comments__c</fullName>
    <label>Notes/Comments</label>
    <type>TextArea</type>
</CustomField>