force-app/main/default/objects/WD_Requistion__c/fields/Offers_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Offers_Accepted__c</fullName>
    <description># of Offers Accepted thus far for the Job Req</description>
    <inlineHelpText># of Offers Accepted thus far for the Job Req</inlineHelpText>
    <label>Offers Accepted</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>