force-app/main/default/objects/WD_Requistion__c/fields/Offers_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Offers_Outstanding__c</fullName>
    <description># of Offers Outstanding thus far for the Job Req</description>
    <inlineHelpText># of Offers Outstanding thus far for the Job Req</inlineHelpText>
    <label>Offers Outstanding</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>