force-app/main/default/objects/WD_Requistion__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <inlineHelpText>When the req is opened</inlineHelpText>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>