force-app/main/default/objects/WD_Requistion__c/fields/Org_4__c.field-meta.xml
<CustomField>
    <fullName>Org_4__c</fullName>
    <inlineHelpText>Full name (First Name Last Name)</inlineHelpText>
    <label>Org 4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>