force-app/main/default/objects/WD_Requistion__c/fields/Remaining_Openings__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Openings__c</fullName>
    <description># of Remaining Openings for the Job Req</description>
    <inlineHelpText># of Remaining Openings for the Job Req</inlineHelpText>
    <label>Remaining Openings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>