force-app/main/default/objects/WD_Requistion__c/fields/Req_Status__c.field-meta.xml
<CustomField>
    <fullName>Req_Status__c</fullName>
    <inlineHelpText>eg: Open, Closed, etc. (status of the job req)</inlineHelpText>
    <label>Req Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>