force-app/main/default/objects/WD_Requistion__c/fields/Requisition_ID__c.field-meta.xml
<CustomField>
    <fullName>Requisition_ID__c</fullName>
    <description>eg: JR1926821</description>
    <inlineHelpText>eg: JR1926821</inlineHelpText>
    <label>Requisition ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>