force-app/main/default/objects/WD_Requistion__c/fields/Sub_Business_Area__c.field-meta.xml
<CustomField>
    <fullName>Sub_Business_Area__c</fullName>
    <inlineHelpText>Eg.: WWFO SIP-Enterprise, WWFO Non SIP, etc.</inlineHelpText>
    <label>Sub Business Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>