force-app/main/default/objects/WD_Requistion__c/fields/Total_Hires__c.field-meta.xml
<CustomField>
    <fullName>Total_Hires__c</fullName>
    <description># of Total Hires thus far for the Job Req</description>
    <inlineHelpText># of Total Hires thus far for the Job Req</inlineHelpText>
    <label>Total Hires</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>