force-app/main/default/objects/WD_Requistion__c/fields/Total_Openings__c.field-meta.xml
<CustomField>
    <fullName>Total_Openings__c</fullName>
    <description># of Total Openings for the Job Req</description>
    <inlineHelpText># of Total Openings for the Job Req</inlineHelpText>
    <label>Total Openings</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>