force-app/main/default/objects/WD_Requistion__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <inlineHelpText>eg: &apos; US, NC, Durham&apos;, &apos;US, CA, Santa Clara&apos;</inlineHelpText>
    <label>Work Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>