force-app/main/default/objects/WD_Requistion__c/fields/Worker_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Worker_Sub_Type__c</fullName>
    <inlineHelpText>eg: Regular Employee, Management, New College Graduate, Intern etc.</inlineHelpText>
    <label>Worker Sub-Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>