force-app/main/default/objects/WD_Requistion__c/fields/WWFO_Coverage__c.field-meta.xml
<CustomField>
    <fullName>WWFO_Coverage__c</fullName>
    <inlineHelpText>eg:&apos;OEM&apos;,&apos;Geforce&apos;,&apos;Embedded&apos;,&apos;Territory&apos;, etc</inlineHelpText>
    <label>WWFO Coverage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>