force-app/main/default/objects/WD_Requistion__c/fields/WWFO_Coverage_Details__c.field-meta.xml
<CustomField>
    <fullName>WWFO_Coverage_Details__c</fullName>
    <inlineHelpText>FAE OEM HPE&apos;, &apos;Dell Technologies&apos;, &apos;Global Partnerships&apos;, etc</inlineHelpText>
    <label>WWFO Coverage Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>