force-app/main/default/objects/WD_Requistion__c/fields/WWFO_Function__c.field-meta.xml
<CustomField>
    <fullName>WWFO_Function__c</fullName>
    <inlineHelpText>eg: &apos;Industry&apos;, &apos;Partner&apos;</inlineHelpText>
    <label>WWFO Function</label>
    <length>100</length>
    <type>Text</type>
</CustomField>