force-app/main/default/objects/WD_Requistion__c/fields/WWFO_Region_Support__c.field-meta.xml
<CustomField>
    <fullName>WWFO_Region_Support__c</fullName>
    <inlineHelpText>eg: WW, NALA, China, etc.</inlineHelpText>
    <label>WWFO Region Support</label>
    <length>100</length>
    <type>Text</type>
</CustomField>