force-app/main/default/objects/WD_Requistion__c/fields/WWFO_Role__c.field-meta.xml
<CustomField>
    <fullName>WWFO_Role__c</fullName>
    <inlineHelpText>eg: &apos;IBD&apos;, &apos;AM&apos;, &apos;SA&apos;,&apos; PBM&apos;</inlineHelpText>
    <label>WWFO Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>