force-app/main/default/objects/WD_Requistion__c/listViews/Japan.listView-meta.xml
<ListView>
    <fullName>Japan</fullName>
    <columns>NAME</columns>
    <columns>Business_Area__c</columns>
    <columns>Cost_Center_Name__c</columns>
    <columns>IsEvergreen__c</columns>
    <columns>Job_Requisition__c</columns>
    <columns>Market__c</columns>
    <columns>Offers_Accepted__c</columns>
    <columns>Offers_Outstanding__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Remaining_Openings__c</columns>
    <columns>Req_Status__c</columns>
    <columns>Total_Hires__c</columns>
    <columns>Total_Openings__c</columns>
    <columns>Work_Location__c</columns>
    <columns>Notes_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Location__c</field>
        <operation>startsWith</operation>
        <value>Japan</value>
    </filters>
    <label>Japan</label>
</ListView>